Added set_domain_user_id method (#115)
Added set_useragent method (#116)
Added set_ip_address method (#117)
Added set_network_user_id method (#118)
Updated contexts schema to 1-0-1 (#119)
Added integration tests using mocked POST requests (#122)
Started preserving unicode characters in JSONs (#123)
Used Travis CI image for master branch in README (#125)
Added license button to README (#126)

Version 0.5.0 (2014-08-13)
--------------------------
Converted payload values to strings for POST requests (#100)
Set content type to "application/json; charset=utf-8" for POST requests (#99)
Changed collector endpoint for POST to /com.snowplowanalytics.snowplow/tp2 (#98)
Stopped setting and sending tid (#94)
Started setting and sending eid (#93)
Allowed a single Tracker instance to send events to multiple Emitters (#91)
Started passing a list of dictionaries to the on_failure callback for POST requests (#104)
Made the "name" argument of track_screen_view optional (#103)
Made all tracker methods chainable (#105)
Stopped sending empty payloads (#106)

Version 0.4.0 (2014-06-10)
--------------------------
Migrated unstructured events to self-describing JSON (#87)
Migrated custom contexts to self-describing JSON (#88)
Gave separate events within an ecommerce transaction different transaction IDs (#89) 
Added https support for tracker (#81)
Added callbacks for flushing (#78)
Added Python-logging (#76)
Added Redis and gevent based async approach (#75)
Added thread-based AsyncBufferedConsumer (#74)
Added ability to specify port for collector (#72)
Added POST support to tracker (#70)
Added Redis-based queue (#45)
Added Buffered Consumer (#44)
Changed user_id to be set on a per-event basis (#39)
Removed type hint suffixes from unstructured events (#36)

Version 0.3.0 (2014-04-25)
--------------------------
Added custom context vendor configuration option (#67)
Changed the return value of the tracking methods to a tuple (#65)
Added coveralls code coverage button (#64)