@@ -1,0 +1,4 @@
+To get started:
+vagrant ssh
+cd /vagrant
+./run-tests.sh
