@@ -12,6 +12,7 @@ Added integration tests using mocked POST requests (#122)
 Started preserving unicode characters in JSONs (#123)
 Used Travis CI image for master branch in README (#125)
 Added license button to README (#126)
+Added dedicated Vagrant setup (#127)
 
 Version 0.5.0 (2014-08-13)
 --------------------------
